<resources>
    <string name="app_name">My ApplicationUAX</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_password_repeat">0</string>
    <string name="action_sign_up">0</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="has_olvidado_la_contrase_a">HAS OLVIDADO LA CONTRASEÑA?</string>
    <string name="crear_una_cuenta">CREAR UNA CUENTA</string>
    <string name="todo_1">TODO</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="usuario">Usuario</string>
    <string name="todo_2">TODO</string>
</resources>